--- a/appendix/A.tex
+++ b/appendix/A.tex
@@ -1,5 +1,6 @@
 % \chapter{Design Provisions for Self-stressing System for Bridge Application with Emphasis on Precast Panel Deck System}
 \chapter{以预制面板系统为重点的桥梁应用自应力系统设计规定}
+\label{chp:provisions-self-stressing-system}
 % Steel girder bridges often use continuity over the interior supports to reduce interior forces on the spans. In continuous structures with composite concrete decks, the location of maximum negative bending moment is over the interior supports. This moment produces tensile stresses in the concrete deck and compressive stress in the bottom flanges of the girders. The tensile stress in the deck leads to cracking, which allows intrusion of moisture and road salt, causing corrosion of the reinforcement, and supporting girders. Continued maintenance is required to forestall the deterioration; however, replacement of the deck is eventually required.
 钢梁桥通常使用内部支撑的连续性来减少跨度上的内力。 在具有组合混凝土桥面板的连续结构中，最大负弯矩的位置在内部支撑上方。 这个力矩在混凝土面板中产生拉应力，在大梁的底部翼缘板中产生压应力。桥面板中的拉应力会导致混凝土开裂，从而使水分和道路盐分侵入，导致钢筋和支撑梁腐蚀。 虽然采取持续维护可以防止结构\gls*{deterioration}，但最终还是需要更换桥面板。
 
