--- a/contents/chp05.tex
+++ b/contents/chp05.tex
@@ -198,7 +198,7 @@ effective technologies and materials from the numerous choices available.
 
 Durability and desired service life must be considered during design. In the case of new structures, it is desirable
 to avoid, prevent, or delay the initiation of corrosion through the use of low permeability concretes, proper
-precautions against cracking (see Chapter 3), and other corrosion-prevention techniques. For existing structures, the
+precautions against cracking (see \cref{chp:materials}), and other corrosion-prevention techniques. For existing structures, the
 condition of the structure should be evaluated to determine if it is corroding or not. If the structure is corroding and
 the chloride content is high in the concrete, the contaminated concrete is removed; if rust is forming on the surface of
 the reinforcement, it is cleaned or removed and overlaid with a low permeability concrete overlay. If the existing
@@ -246,15 +246,11 @@ Many strategies have been used successfully to improve the corrosion resistance 
   \item The use of improved design details to keep elements dry and to prevent exposure to chlorides.
 \end{itemize}
 
-In the United States, epoxy-coated reinforcement (ECR) has been widely used as a corrosion protection system
-for concrete bridges. However, recent work and observations in the field have shown that the longevity desired (75
-years and beyond) may not be achievable and therefore, other corrosion resistant reinforcements are being considered
-(see Chapter 3 on materials).
+In the United States, epoxy-coated reinforcement (ECR) has been widely used as a corrosion protection system for concrete bridges. However, recent work and observations in the field have shown that the longevity desired (75 years and beyond) may not be achievable and therefore, other corrosion resistant reinforcements are being considered (see \cref{chp:materials} on materials).
 
-Each of these methods can be effective if it significantly extends the time for corrosion to initiate. In many cases
-it is preferable to employ more than one technique as this will generally reduce the overall risk of corrosion.
+Each of these methods can be effective if it significantly extends the time for corrosion to initiate. In many cases it is preferable to employ more than one technique as this will generally reduce the overall risk of corrosion.
 
-Additional information on these topics is provided in Chapter 3 on materials.
+Additional information on these topics is provided in \cref{chp:materials} on materials.
 
 \subsection{Existing Structures}
 Options for protecting structures from corrosion and extending their service life are much more limited when
@@ -437,7 +433,7 @@ An impressed current cathodic protection (ICCP) system was installed on over 200
 
 Also in 1989, an electrochemical chloride extraction trial was completed by MTO on a section of the same structure. The treated portion was comprised of rectangular piers and bents. The piers were contaminated with chlorides due to long-term leakage of the deck joints above.
 
-Electrochemical chloride extraction was used to reduce the chloride content of the concrete to below the threshold level of corrosion at the rebar. This process eliminated high corrosion potential readings and corrosion potentials in the treated area were shifted into the passive range as shown in Table 5.2; in this table ECE treated section exhibited a high percentage of area with a low risk of corrosion. Corrosion current as measured by linear polarization (3-LP) was greatly reduced as shown in Table 5.3; in this table ECE treated sections exhibited a high percentage of passive area. Thus, corrosion potentials and corrosion currents were reduced to the passive, noncorroding range as a result of the electrochemical chloride extraction treatment for a 20-year duration as shown in \cref{tab:corrosion-potential-measurements,tab:corrosion-current-measurements}. These readings have remained stable and show no significant changes over the period.
+Electrochemical chloride extraction was used to reduce the chloride content of the concrete to below the threshold level of corrosion at the rebar. This process eliminated high corrosion potential readings and corrosion potentials in the treated area were shifted into the passive range as shown in \cref{tab:corrosion-potential-measurements}; in this table ECE treated section exhibited a high percentage of area with a low risk of corrosion. Corrosion current as measured by linear polarization (3-LP) was greatly reduced as shown in \cref{tab:corrosion-current-measurements}; in this table ECE treated sections exhibited a high percentage of passive area. Thus, corrosion potentials and corrosion currents were reduced to the passive, noncorroding range as a result of the electrochemical chloride extraction treatment for a 20-year duration as shown in \cref{tab:corrosion-potential-measurements,tab:corrosion-current-measurements}. These readings have remained stable and show no significant changes over the period.
 
 Additional piers were treated during the fall of 1997 as part of the next phase of work on this project. The longterm results from these more recent tests are expected to be similar to the electrochemical chloride extraction trial completed in 1989.
 
@@ -454,6 +450,7 @@ Additional piers were treated during the fall of 1997 as part of the next phase 
 \end{table}
 
 \subsection{Project Overview: Galvanic Cathodic Protection: Galvanic Encasement of Severely Corroded Elements}
+
 Galvanic anodes have also been developed for more global corrosion control. One such configuration is the system installed to repair and protect severely damaged and corroding bridge abutments in the Midwest (\cref{fig:distribute-anode}). The abutments had been contaminated with chlorides causing corrosion of the reinforcing steel and significant concrete damage.
 
 \begin{figure}
