--- a/contents/chp09.tex
+++ b/contents/chp09.tex
@@ -1,5 +1,6 @@
 % \chapter{Expansion Devices}
-\chapter{伸缩装置}\label{chp:expansion-devices}
+\chapter{伸缩装置}
+\label{chp:expansion-devices}
 % Bridge elements are subjected to various loads, including traffic and environmental loads that result in movement of bridge elements. One of the key factors affecting the service life of bridges is how to address thermal expansion and contraction of the bridge elements. This design issue is handled in two distinct ways. One option is to provide expansion joints at designated locations within the superstructure. By doing so, the designer forces the entire thermal deformation to take place at these discrete locations. The other option is to make the superstructure and deck continuous and assume that the thermal movement will be accommodated by the flexibility of the substructure, such as with the use of integral abutments. In such cases, the joint is usually moved away from the bridge abutment and placed near the end of the approach slab.
 桥梁\gls*{element}承受各种载荷，包括导致桥梁\gls*{element}移动的交通和环境载荷。 影响桥梁\gls*{servicelife}的关键因素之一是如何解决桥梁构件的热胀冷缩问题。 这个设计问题以两种不同的方式处理。 一种选择是在上部结构的指定位置提供伸缩缝。 通过这样做，设计者迫使整个温度变形发生在这些离散的位置。 另一种选择是使上部结构和桥面板连续，并使温度变形通过下部结构的柔度来调节，例如使用整体桥台。 在这种情况下，接缝通常会从桥台移开，并放置在引板板末端附近。
 
@@ -27,36 +28,40 @@
 
 % Following are characteristics of an ideal expansion joint (Lee 1994):
 以下是理想伸缩缝的特征 \cite{lee1994b}：
+% \begin{itemize}
+%   \item Accommodate thermal expansion and contraction,
+%   \item Accommodate movement due to traffic-induced loads,
+%   \item Provide a smooth ride,
+%   \item Prevent the creation of hazards and safety issues,
+%   \item Accommodate needs during snow removal,
+%   \item Prevent leaking of moisture and other chemicals to elements below the superstructure,
+%   \item Have a long service life,
+%   \item Be maintenance-free or require minimal maintenance, and
+%   \item Be cost effective.
+% \end{itemize}
 \begin{itemize}
-  % \item Accommodate thermal expansion and contraction,
   \item 适应热胀冷缩；
-  % \item Accommodate movement due to traffic-induced loads,
   \item 适应车辆荷载引起的位移；
-  % \item Provide a smooth ride,
   \item 提供顺畅的乘车体验；
-  % \item Prevent the creation of hazards and safety issues,
   \item 防止产生危险和安全问题；
-  % \item Accommodate needs during snow removal,
   \item 满足除雪期间的需求；
-  % \item Prevent leaking of moisture and other chemicals to elements below the superstructure,
   \item 防止水分和其他化学品泄漏到上部结构下方的\gls*{element}；
-  % \item Have a long service life,
   \item 有较长的\gls*{servicelife}；
-  % \item Be maintenance-free or require minimal maintenance, and
   \item 免维护或需要最少的维护；
-  % \item Be cost effective.
   \item 具有成本效益。
 \end{itemize}
 
 % There are several ways to categorize expansion joint systems. One approach is to divide the various joints based on the maximum longitudinal movements that they can accommodate. There are many different joint types and often the terminology used to describe them differs from agency to agency or manufacturer to manufacturer. Expansion joints can be classified into three categories based on the maximum longitudinal movements as follows:
 有几种方法可以对伸缩缝系统进行分类。 一种方法是根据它们可以容纳的最大纵向运动来划分各种关节。 有许多不同的接头类型，用于描述它们的术语通常因机构或制造商而异。 伸缩缝根据最大纵向位移可分为以下三类：
 
+% \begin{enumerate}
+%   \item Expansion joints capable of accommodating small longitudinal movements (less than about 3 in.),
+%   \item Expansion joints capable of accommodating medium longitudinal movements (between 3 and 5in.), and
+%   \item Expansion joints capable of accommodating large longitudinal movements (in excess of 5 in.). 
+% \end{enumerate}
 \begin{enumerate}
-  % \item Expansion joints capable of accommodating small longitudinal movements (less than about 3 in.),
   \item Expansion joints capable of accommodating small longitudinal movements (less than about 3 in.),
-  % \item Expansion joints capable of accommodating medium longitudinal movements (between 3 and 5in.), and
   \item Expansion joints capable of accommodating medium longitudinal movements (between 3 and 5in.), and
-  % \item Expansion joints capable of accommodating large longitudinal movements (in excess of 5 in.). 
   \item Expansion joints capable of accommodating large longitudinal movements (in excess of 5 in.). 
 \end{enumerate}
 
@@ -392,7 +397,8 @@ the debris is essential when using finger plate expansion joint.
 
 
 % \section{Factors and Considerations Influencing Expansion Joint Service Life}\label{sec:factors-joints-life}
-\section{影响伸缩缝\glsentrytext{servicelife}的因素和注意事项}\label{sec:factors-joints-life}
+\section{影响伸缩缝\glsentrytext{servicelife}的因素和注意事项}
+\label{sec:factors-joints-life}
 Joint performance is perhaps the most important factor affecting the deterioration of bridge elements. A leaky
 joint allows salt and other chemicals to penetrate below the deck and causes many maintenance and deterioration
 problems. A study conducted by the FHWA (Fincher 1983) reports that over a five-year period, more than 60\% of
@@ -508,29 +514,16 @@ Coastal climate influences on bridge expansion joint service life performance ar
 introduced through salt spray and effects from high humidity. These influences both occur naturally.
 
 \paragraph*{Salt Spray}
-Coastal regions are subjected to a chloride-laden saltwater environment and a combination of wind and wave
-action that causes these chlorides to become airborne as salt spray. The susceptibility of the bridge expansion joints
-to these environmental influences depends on the height of the bridge deck above the water elevation. The salt spray
-wets the surfaces leaving a chloride residual that can cause steel components of expansion devices to corrode.
+Coastal regions are subjected to a chloride-laden saltwater environment and a combination of wind and wave action that causes these chlorides to become airborne as salt spray. The susceptibility of the bridge expansion joints to these environmental influences depends on the height of the bridge deck above the water elevation. The salt spray wets the surfaces leaving a chloride residual that can cause steel components of expansion devices to corrode.
 
 \subsubsection{Chemical Climate}
-Chemical climate influences on service life performance can be attributed to corrosion-inducing chemicals or
-other chemicals that can have detrimental effects on exposed neoprene elements. These influences can occur
-naturally or can be manmade.
+Chemical climate influences on service life performance can be attributed to corrosion-inducing chemicals or other chemicals that can have detrimental effects on exposed neoprene elements. These influences can occur naturally or can be manmade.
 
 \paragraph*{Corrosion-Inducing Chemicals}
-Corrosion-inducing chemicals can be introduced to the bridge deck and joints from adjacent industries in which
-residuals from pollution can attribute to reduction in bridge expansion joint service life. As an example, oil and coal burning facilities release sulfur dioxide and nitrogen oxide into the air, which causes acid rain consisting of sulfuric
-and nitric acids. These acids can dissolve cement compounds in the cement paste and calcareous aggregates, and
-leave crystallized salts on concrete surfaces that can lead to spalling and the corrosion of reinforcing bars at the site
-of expansion devices, as well as components of the joints themselves.
+Corrosion-inducing chemicals can be introduced to the bridge deck and joints from adjacent industries in which residuals from pollution can attribute to reduction in bridge expansion joint service life. As an example, oil and coal burning facilities release sulfur dioxide and nitrogen oxide into the air, which causes acid rain consisting of sulfuric and nitric acids. These acids can dissolve cement compounds in the cement paste and calcareous aggregates, and leave crystallized salts on concrete surfaces that can lead to spalling and the corrosion of reinforcing bars at the site of expansion devices, as well as components of the joints themselves.
 
 \subsection{Production and Operation Bridge Deck Considerations}
-Decisions made for the production of bridge expansion devices and activities during its operation can have a
-significant influence on the service life of bridge expansion joints. These production and operation influences are
-introduced in the fault tree provided in \cref{fig:faulttree-expansion-joint-operation}, and include decisions made during the design and detailing of the
-bridge expansion joints, and decisions regarding the quality of construction, the level of inspection and testing
-performed during operations, and maintenance implementation.
+Decisions made for the production of bridge expansion devices and activities during its operation can have a significant influence on the service life of bridge expansion joints. These production and operation influences are introduced in the fault tree provided in \cref{fig:faulttree-expansion-joint-operation}, and include decisions made during the design and detailing of the bridge expansion joints, and decisions regarding the quality of construction, the level of inspection and testing performed during operations, and maintenance implementation.
 
 \begin{figure}
   % \includegraphics[width=\linewidth]{graphic-file}
@@ -539,96 +532,56 @@ performed during operations, and maintenance implementation.
 \end{figure}
 
 \subsubsection{Design and Detailing Bridge Deck Considerations}
-Decisions made during the design and detailing phase of a bridge project can significantly impact the service life
-of the bridge. It is incumbent upon designers to understand the implications of these decisions in order to make
-rational choices that will improve the service life of bridge expansion devices.
+Decisions made during the design and detailing phase of a bridge project can significantly impact the service life of the bridge. It is incumbent upon designers to understand the implications of these decisions in order to make rational choices that will improve the service life of bridge expansion devices.
 
 \subsubsection{Construction}
-Attention to good practices during construction and installation is crucial to the long-term durability of expansion
-devices. Well-qualified, trained and executed workmanship increases productivity, reduces material waste, and
-provides expected service life. Proper use of test methods is needed to ensure that quality expansion joints are
-achieved.
+Attention to good practices during construction and installation is crucial to the long-term durability of expansion devices. Well-qualified, trained and executed workmanship increases productivity, reduces material waste, and provides expected service life. Proper use of test methods is needed to ensure that quality expansion joints are achieved.
 
 \subsubsection{Maintenance Plan—Monitoring of Condition}
-An effective maintenance plan must include provisions to adequately monitor the structure in order to identify
-deficiencies at an early age so that appropriate repairs can be performed before the deficiency propagates into an
-irreparable condition. The plan should address proper inspection, collection of data, and prompt action upon reported
-deficiencies.
+An effective maintenance plan must include provisions to adequately monitor the structure in order to identify deficiencies at an early age so that appropriate repairs can be performed before the deficiency propagates into an irreparable condition. The plan should address proper inspection, collection of data, and prompt action upon reported deficiencies.
 
 \subsubsection{Inspection Requirements and Intervals}
-Inspection is a valuable tool for increasing the service life of bridges. Identification of deterioration at an early
-stage is essential to providing corrective actions in a timely manner in order to maximize the owner’s investment in
-the structure. The scope and interval of these inspections should be calibrated based on bridge expansion device
-performance history for the applicable deck hazard exposures. Inspection personnel should be properly trained to
-identify this deterioration.
+Inspection is a valuable tool for increasing the service life of bridges. Identification of deterioration at an early stage is essential to providing corrective actions in a timely manner in order to maximize the owner’s investment in the structure. The scope and interval of these inspections should be calibrated based on bridge expansion device performance history for the applicable deck hazard exposures. Inspection personnel should be properly trained to identify this deterioration.
 
 \section{Overall Strategies for Enhanced Bridge Expansion Joints Service Life}\label{sec:strategy-joints-life}
-Providing bridge expansion joints with enhanced service life requires a full understanding of the potential
-deterioration mechanisms. These mechanisms are associated with load-induced conditions, local environmental
-hazards, production-created deficiencies, and lack of effective operational procedures. This process is presented in
-this section.
+Providing bridge expansion joints with enhanced service life requires a full understanding of the potential deterioration mechanisms. These mechanisms are associated with load-induced conditions, local environmental hazards, production-created deficiencies, and lack of effective operational procedures. This process is presented in this section.
 
-The intention of this section is to provide guidelines for selecting the most appropriate individual strategy to
-achieve the desired service life.
+The intention of this section is to provide guidelines for selecting the most appropriate individual strategy to achieve the desired service life.
 
 \subsection{Design Methodology}
-With limited funds available for bridge construction, first-cost economy is often an overriding factor in critical
-bridge joint selection decisions. However, to take advantage of the long-term advantages of durable expansion joints,
-service life enhancement strategies must apply a cascading series of economy, design, construction, and maintenance
-measures. The success of the strategy selection process is dependent on the ability to predict service life and the
-incorporation of best practices to enhance service life.
+With limited funds available for bridge construction, first-cost economy is often an overriding factor in critical bridge joint selection decisions. However, to take advantage of the long-term advantages of durable expansion joints, service life enhancement strategies must apply a cascading series of economy, design, construction, and maintenance measures. The success of the strategy selection process is dependent on the ability to predict service life and the incorporation of best practices to enhance service life.
 
 \subsection{Expansion Joint System Selection}
-In general, selection of bridge expansion joints is historically based on locally accepted construction practices
-and procedures, which result in an economical deployment. Proposed enhancements to these systems would need to
-be assessed on the specific long-term performance of these systems. As noted in Section 9.2, there are numerous
-deficiencies that result in a reduction of service life, and these conditions may not necessarily occur at the specific
-project site under consideration. It is the design engineer’s responsibility to understand local practice and its
-performance history, and to perform sufficient investigation of the project site, its environment, and other design
-conditions prior to selecting an expansion joint and its potential enhancements.
+In general, selection of bridge expansion joints is historically based on locally accepted construction practices and procedures, which result in an economical deployment. Proposed enhancements to these systems would need to be assessed on the specific long-term performance of these systems. As noted in \cref{sec:factors-joints-life}, there are numerous deficiencies that result in a reduction of service life, and these conditions may not necessarily occur at the specific project site under consideration. It is the design engineer’s responsibility to understand local practice and its performance history, and to perform sufficient investigation of the project site, its environment, and other design conditions prior to selecting an expansion joint and its potential enhancements.
 
 
-\subsection{Life-Cycle Cost Analysis (LCCA)}
-Once a series of strategies has been developed, the evaluation of these strategies is performed through a life-cycle
-cost analysis. LCCA provides an assessment of the overall long-term cost of a strategy throughout the target service
-life of the structure. LCCA is discussed in detail in Chapter 11 of this guide.
+% \subsection{Life-Cycle Cost Analysis (LCCA)}
+\subsection{\texorpdfstring{\acrfull*{lcca}}{全生命周期成本分析}}
+Once a series of strategies has been developed, the evaluation of these strategies is performed through a life-cycle cost analysis. \acrlong*{lcca} provides an assessment of the overall long-term cost of a strategy throughout the target service life of the structure. \acrlong*{lcca} is discussed in detail in \cref{chp:lcca} of this guide.
 
-The analysis should consider all costs associated with the construction required, implementation trials and
-testing, and all future maintenance actions required through the life of the structure.
+The analysis should consider all costs associated with the construction required, implementation trials and testing, and all future maintenance actions required through the life of the structure.
 
 \subsection{Construction Practice Specifications}
-Once the bridge expansion joint system is selected, a proper set of specifications must be developed to ensure the
-appropriate standard of care is used during construction. It should be noted that many agencies and manufacturers have specific requirements for temperature setting for expansion joints to allow maximum range of movements,
-which need to be considered during design and construction.
+Once the bridge expansion joint system is selected, a proper set of specifications must be developed to ensure the appropriate standard of care is used during construction. It should be noted that many agencies and manufacturers have specific requirements for temperature setting for expansion joints to allow maximum range of movements, which need to be considered during design and construction.
 
 
 \subsection{Maintenance Plan}
-An effective maintenance plan must be developed to ensure the assumptions regarding maintenance upkeep made
-in the bridge expansion joint selection process are properly identified for staff and budget requirements. If the bridge
-owner cannot commit to such a program, then strategies for low maintenance life-cycle costs should be
-recommended.
+An effective maintenance plan must be developed to ensure the assumptions regarding maintenance upkeep made in the bridge expansion joint selection process are properly identified for staff and budget requirements. If the bridge owner cannot commit to such a program, then strategies for low maintenance life-cycle costs should be recommended.
 
 \subsection{Retrofit Practices for Expansion Devices}
-Expansion joints in bridges are not typically retrofitted as it is common practice to replace the joints when they
-reach the end of their service life. Due to the perishable nature of these expansion joints, it is important that they be
-properly maintained in order to maximize the life of such devices.
+Expansion joints in bridges are not typically retrofitted as it is common practice to replace the joints when they reach the end of their service life. Due to the perishable nature of these expansion joints, it is important that they beproperly maintained in order to maximize the life of such devices.
 
 \subsection{Technology Tables}
-The following technology table is provided to summarize service life and durability issues related to expansion
-joints, and to aid the designing engineer in selecting the proper expansion device. Table 9.1 provides service life
-issues related to most expansion joints used in practice. The information could be used in several different ways at
-the design or maintenance level. The purpose of the technology table is to identify the most common types of service
-life problems encountered in commonly used expansion joints, and this information can subsequently be utilized to
-provide possible solutions to service life problems encountered with expansion joints.
+The following technology table is provided to summarize service life and durability issues related to expansion joints, and to aid the designing engineer in selecting the proper expansion device. \cref{tab:bridge-joints-technology} provides service life issues related to most expansion joints used in practice. The information could be used in several different ways at the design or maintenance level. The purpose of the technology table is to identify the most common types of service life problems encountered in commonly used expansion joints, and this information can subsequently be utilized to provide possible solutions to service life problems encountered with expansion joints.
 
 \begin{table}
+  % \caption{Bridge Joints Technology Table}
   \caption{Bridge Joints Technology Table}
   \label{tab:bridge-joints-technology}
   % \input{tables/bridge-joints-technology}
 \end{table}
 
-Review of the technology tables indicates that the following modes of failure are observed when various
-expansion joints are used:
+Review of the technology tables indicates that the following modes of failure are observed when various expansion joints are used:
 \begin{itemize}
   \item Damage to various expansion joint components, such as steel armors, due to snowplow usage;
   \item Inadequate design, installation, and maintenance;
@@ -638,17 +591,16 @@ expansion joints are used:
   \item Leakage.
 \end{itemize}
 
-The ultimate consequence of these service life problems is that joints start leaking and causing damage to bridge
-elements below the deck.
+The ultimate consequence of these service life problems is that joints start leaking and causing damage to bridge elements below the deck.
 
-\subsection{Strategy Table for Expansion Joints}
-Selecting the appropriate expansion device for the required movement range is the most critical step in enhancing
-the service the life of these joints. Table 9.2 summarizes the information presented in this chapter and proposes
-recommended strategies when expansion devices are to be used. The table is intended to serve as a guide to the
-designer in selecting bridge expansion devices.
+% \subsection{Strategy Table for Expansion Joints}
+\subsection{伸缩缝策略表}
+% Selecting the appropriate expansion device for the required movement range is the most critical step in enhancing the service the life of these joints. \cref{tab:strategy-table-expansion-joints} summarizes the information presented in this chapter and proposes recommended strategies when expansion devices are to be used. The table is intended to serve as a guide to the designer in selecting bridge expansion devices.
+为适应桥梁的运动与变形选择合适的伸缩装置是提高这些接缝使用寿命的最关键步骤。\cref{tab:strategy-table-expansion-joints}总结了本章中提供的信息，并提出了使用伸缩装置时的建议策略。该表旨在作为设计人员选择桥梁伸缩装置的指南。
 
 \begin{table}
-  \caption{Strategy Table for Expansion Joints}
+  % \caption{Strategy Table for Expansion Joints}
+  \caption{伸缩缝策略表}
   \label{tab:strategy-table-expansion-joints}
   % \input{tables/strategy-table-expansion-joints}
 \end{table}
