--- a/contents/chp11.tex
+++ b/contents/chp11.tex
@@ -1,6 +1,7 @@
 % \chapter{Life-Cycle Cost Analysis}
 % \chapter{\texorpdfstring{\acrlong{lcca}}{全生命周期成本分析}}\label{chp:lcca}
-\chapter[全生命周期成本分析]{\acrlong{lcca}}\label{chp:lcca}
+\chapter[全生命周期成本分析]{\acrlong{lcca}}
+\label{chp:lcca}
 % \section{Introduction}
 \section{简介}
 % This chapter introduces life-cycle cost analysis (LCCA) and its use in the decision making process for selecting optimum cost effective bridge systems, subsystems, and elements that can achieve long term service life. It includes general guidelines and best practices for application of LCCA, and outlines the steps in the process, along with a brief discussion of the economic principals involved. References to available models are made without recommending the use of a specific software or model.
