--- a/setup/setup.tex
+++ b/setup/setup.tex
@@ -315,4 +315,8 @@
   description={High-Load Multi-Rotation, 大吨位多向转动}
 ]{hlmr}{HLMR}{大吨位多向转动}
 
+\newacronym[%
+  description={Epoxy-Coated Reinforcement, 环氧涂层钢筋}
+]{ecr}{ECR}{环氧涂层钢筋}
+
 %%% ----------------------------------------------------------------------------
